[#noissue] Refactor ServerBuilder